--- a/about.html
+++ b/about.html
@@ -13,20 +13,20 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/css/swiper.min.css" />
-    <link rel="stylesheet" href="/css/style-about.css" />
+    <link rel="stylesheet" href="css/swiper.min.css" />
+    <link rel="stylesheet" href="css/style-about.css" />
     <link
       rel="shortcut icon"
-      href="/img/underhills-favicon.ico"
+      href="img/underhills-favicon.ico"
       type="image/x-icon"
     />
-    <link rel="icon" href="/img/underhills-favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/underhills-favicon.ico" type="image/x-icon" />
 
     <script
       src="https://kit.fontawesome.com/626ae7754c.js"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/swiper.min.js"></script>
+    <script src="js/swiper.min.js"></script>
 
     <title>Max Underhill's Farm Supply | About</title>
 
