--- a/services.html
+++ b/services.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <link rel="stylesheet" href="/css/owl.carousel.css" />
-    <link rel="stylesheet" href="/css/owl.theme.default.css" />
+    <link rel="stylesheet" href="css/owl.carousel.css" />
+    <link rel="stylesheet" href="css/owl.theme.default.css" />
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -15,13 +15,13 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="/css/style-services.css" />
+    <link rel="stylesheet" href="css/style-services.css" />
     <link
       rel="shortcut icon"
-      href="/img/underhills-favicon.ico"
+      href="img/underhills-favicon.ico"
       type="image/x-icon"
     />
-    <link rel="icon" href="/img/underhills-favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="img/underhills-favicon.ico" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/626ae7754c.js"
       crossorigin="anonymous"
