--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="/index.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
-              <a href="/about.html" class="nav-link">About</a>
+              <a href="about.html" class="nav-link">About</a>
             </li>
 
             <li class="nav-item">
-              <a href="/services.html" class="nav-link">Products & Services</a>
+              <a href="services.html" class="nav-link">Products & Services</a>
             </li>
 
             <li class="nav-item">
-              <a href="/contact.html" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -89,12 +89,12 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <a class="logo" href="/index.html">
+              <a class="logo" href="index.html">
                 <img src="img/UnderhillsLogo.png" alt="logo" />
               </a>
             </div>
             <div class="col-md-6">
-              <a class="logo" href="/index.html">
+              <a class="logo" href="index.html">
                 <img src="img/AgromartLogo.png" alt="logo" />
               </a>
             </div>
@@ -167,7 +167,7 @@
               Underhill opened it's doors...
             </p>
             <h5 class="section-one-more">
-              <a href="/about.html#about">Read More</a>
+              <a href="about.html#about">Read More</a>
             </h5>
           </div>
         </div>
