--- a/about.html
+++ b/about.html
@@ -58,19 +58,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="/index.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
-              <a href="/about.html" class="nav-link">About</a>
+              <a href="about.html" class="nav-link">About</a>
             </li>
 
             <li class="nav-item">
-              <a href="/services.html" class="nav-link">Products & Services</a>
+              <a href="services.html" class="nav-link">Products & Services</a>
             </li>
 
             <li class="nav-item">
-              <a href="/contact.html" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
