--- a/services.html
+++ b/services.html
@@ -57,19 +57,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="/index.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
-              <a href="/about.html" class="nav-link">About</a>
+              <a href="about.html" class="nav-link">About</a>
             </li>
 
             <li class="nav-item">
-              <a href="/services.html" class="nav-link">Products & Services</a>
+              <a href="services.html" class="nav-link">Products & Services</a>
             </li>
 
             <li class="nav-item">
-              <a href="/contact.html" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -97,42 +97,42 @@
         <div class="owl-carousel section-padding owl-theme">
           <div class="img-area">
             <a href="https://www.dekalb.ca/"
-              ><img src="/img/Dekalb.jpg" alt="logo"
+              ><img src="img/Dekalb.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.corteva.ca/"
-              ><img src="/img/DowSeeds.png" alt="logo"
+              ><img src="img/DowSeeds.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.syngenta.ca/"
-              ><img src="/img/NK.jpg" alt="logo"
+              ><img src="img/NK.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.dlfpickseed.ca/"
-              ><img src="/img/Pickseed.jpg" alt="logo"
+              ><img src="img/Pickseed.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://sevita.com/"
-              ><img src="/img/ProSeeds.jpg" alt="logo"
+              ><img src="img/ProSeeds.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.qualityseeds.ca/"
-              ><img src="/img/QualitySeeds.jpg" alt="logo"
+              ><img src="img/QualitySeeds.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.seedway.com/"
-              ><img src="/img/Seedway.png" alt="logo"
+              ><img src="img/Seedway.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.stokeseeds.com/ca/"
-              ><img src="/img/StokesSeeds.jpg" alt="logo"
+              ><img src="img/StokesSeeds.jpg" alt="logo"
             /></a>
           </div>
         </div>
@@ -158,57 +158,57 @@
         <div class="owl-carousel section-padding owl-theme">
           <div class="img-area">
             <a href="https://www.bartlett.ca/"
-              ><img src="/img/Bartlett.jpg" alt="logo"
+              ><img src="img/Bartlett.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://agro.basf.ca/basf_solutions/index/main_west.html"
-              ><img src="/img/Basf.png" alt="logo"
+              ><img src="img/Basf.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.cropscience.bayer.ca/"
-              ><img src="/img/Bayer.jpg" alt="logo"
+              ><img src="img/Bayer.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.corteva.com/"
-              ><img src="/img/DowAgroSciences.jpg" alt="logo"
+              ><img src="img/DowAgroSciences.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.corteva.us/"
-              ><img src="/img/DuPont.png" alt="logo"
+              ><img src="img/DuPont.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.belchimcanada.com/"
-              ><img src="/img/Engage.png" alt="logo"
+              ><img src="img/Engage.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://fmccrop.ca/"
-              ><img src="/img/FMC.jpg" alt="logo"
+              ><img src="img/FMC.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.cropscience.bayer.ca/"
-              ><img src="/img/Monsanto.png" alt="logo"
+              ><img src="img/Monsanto.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://nufarm.com/ca/fr/"
-              ><img src="/img/Nufarm.jpg" alt="logo"
+              ><img src="img/Nufarm.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.syngenta.ca/"
-              ><img src="/img/Syngenta.png" alt="logo"
+              ><img src="img/Syngenta.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="http://www.uap.ca/"
-              ><img src="/img/UAP.png" alt="logo"
+              ><img src="img/UAP.png" alt="logo"
             /></a>
           </div>
         </div>
@@ -234,82 +234,82 @@
         <div class="owl-carousel section-padding owl-theme">
           <div class="img-area">
             <a href="https://www.nutrien.com/"
-              ><img src="/img/Agrium.png" alt="logo"
+              ><img src="img/Agrium.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://agro-100.ca/"
-              ><img src="/img/Agro100.png" alt="logo"
+              ><img src="img/Agro100.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.alpinepfl.com/"
-              ><img src="/img/Alpine.png" alt="logo"
+              ><img src="img/Alpine.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.carmeuse.com/na-en/carmeuse-homepage"
-              ><img src="/img/Carmeuse.png" alt="logo"
+              ><img src="img/Carmeuse.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.cfindustries.com/"
-              ><img src="/img/CFIndustries.jpg" alt="logo"
+              ><img src="img/CFIndustries.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.lafarge.ca/en"
-              ><img src="/img/Dufferin.jpg" alt="logo"
+              ><img src="img/Dufferin.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://eurochemgroup.com/"
-              ><img src="/img/EuroChem.jpg" alt="logo"
+              ><img src="img/EuroChem.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="http://www.kochfertilizer.com/"
-              ><img src="/img/Koch.png" alt="logo"
+              ><img src="img/Koch.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.ks-potashcanada.com/"
-              ><img src="/img/KSPotash.png" alt="logo"
+              ><img src="img/KSPotash.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="http://www.mosaicco.com/"
-              ><img src="/img/Mosaic.png" alt="logo"
+              ><img src="img/Mosaic.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.walkerind.com/services/biosolids-management/"
-              ><img src="/img/N-viro.jpg" alt="logo"
+              ><img src="img/N-viro.jpg" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.nutriag.com/"
-              ><img src="/img/NutriAg.png" alt="logo"
+              ><img src="img/NutriAg.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.nutrien.com/"
-              ><img src="/img/PotashCorp.png" alt="logo"
+              ><img src="img/PotashCorp.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="http://stollercanada.ca/"
-              ><img src="/img/Stoller.png" alt="logo"
+              ><img src="img/Stoller.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.andersonsgrain.com/"
-              ><img src="/img/TheAndersons.png" alt="logo"
+              ><img src="img/TheAndersons.png" alt="logo"
             /></a>
           </div>
           <div class="img-area">
             <a href="https://www.yara.com/"
-              ><img src="/img/Yara.png" alt="logo"
+              ><img src="img/Yara.png" alt="logo"
             /></a>
           </div>
         </div>
