--- a/contact.html
+++ b/contact.html
@@ -56,19 +56,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a href="/index.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link">Home</a>
             </li>
 
             <li class="nav-item">
-              <a href="/about.html" class="nav-link">About</a>
+              <a href="about.html" class="nav-link">About</a>
             </li>
 
             <li class="nav-item">
-              <a href="/services.html" class="nav-link">Products & Services</a>
+              <a href="services.html" class="nav-link">Products & Services</a>
             </li>
 
             <li class="nav-item">
-              <a href="/contact.html" class="nav-link">Contact</a>
+              <a href="contact.html" class="nav-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -97,7 +97,7 @@
           <div class="col-md-6">
             <div class="section-three-card">
               <div class="section-three-image">
-                <img src="/img/UnderhillsAylmer.jpg" alt="Aylmer Farm" />
+                <img src="img/UnderhillsAylmer.jpg" alt="Aylmer Farm" />
               </div>
               <div class="section-three-card-content">
                 <h2 class="section-three-content-title">Aylmer</h2>
@@ -112,7 +112,7 @@
           <div class="col-md-6">
             <div class="section-three-card">
               <div class="section-three-image">
-                <img src="/img/UnderhillsVienna.jpg" alt="Vienna Farm" />
+                <img src="img/UnderhillsVienna.jpg" alt="Vienna Farm" />
               </div>
               <div class="section-three-card-content">
                 <h2 class="section-three-content-title">Vienna</h2>
@@ -176,16 +176,16 @@
               </div>
               <ul>
                 <li>
-                  <a href="/index.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li>
-                  <a href="/about.html">About</a>
+                  <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="/services.html">Services</a>
+                  <a href="services.html">Services</a>
                 </li>
                 <li>
-                  <a href="/contact.html">Contact</a>
+                  <a href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
