--- a/services.html
+++ b/services.html
@@ -549,16 +549,16 @@
               </div>
               <ul>
                 <li>
-                  <a href="/index.html">Home</a>
+                  <a href="index.html">Home</a>
                 </li>
                 <li>
-                  <a href="/about.html">About</a>
+                  <a href="about.html">About</a>
                 </li>
                 <li>
-                  <a href="/services.html">Services</a>
+                  <a href="services.html">Services</a>
                 </li>
                 <li>
-                  <a href="/contact.html">Contact</a>
+                  <a href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
