--- a/services.html
+++ b/services.html
@@ -39,7 +39,7 @@
   <body>
     <nav class="navbar navbar-expand-xl navbar-dark fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">
+        <a class="navbar-brand" href="index.html">
           Max Underhill's Farm Supply
         </a>
         <button
