--- a/services.html
+++ b/services.html
@@ -650,7 +650,7 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script src="/js/owl.carousel.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script>
       $(".owl-carousel").owlCarousel({
         loop: true,
